
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen
		android:id="@+id/info"
		android:key="info"
		android:title="@string/main_menu_message"
		android:summary="@string/click_to_web">
		<intent
			android:action="android.intent.action.VIEW"
			android:data="http://opendatakit.org" />
	</PreferenceScreen>
	<PreferenceCategory
		android:title="@string/server_preferences">
		<ListPreference
			android:id="@+id/protocol"
			android:key="protocol"
			android:title="@string/protocol"
			android:dialogTitle="@string/change_protocol"
			android:defaultValue="aggregate_1_0"
			android:entries="@array/protocol_entries"
			android:entryValues="@array/protocol_entry_values" />
		<EditTextPreference
			android:id="@+id/server_url"
			android:key="server_url"
			android:defaultValue="@string/default_server_url"
			android:title="@string/server_url"
			android:dialogTitle="@string/change_server_url" />
		<EditTextPreference
			android:id="@+id/username"
			android:key="username"
			android:title="@string/username"
			android:dialogTitle="@string/change_username" />
		<EditTextPreference
			android:id="@+id/password"
			android:key="password"
			android:title="@string/password"
			android:dialogTitle="@string/change_password"
			android:password="true" />
		<EditTextPreference
			android:id="@+id/formlist_url"
			android:key="formlist_url"
			android:title="@string/formlist_url"
			android:dialogTitle="@string/change_formlist_url" />
		<EditTextPreference
			android:id="@+id/submission_url"
			android:key="submission_url"
			android:title="@string/submission_url"
			android:dialogTitle="@string/change_submission_url" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/client">
		<CheckBoxPreference
			android:id="@+id/show_splash"
			android:key="showSplash"
			android:title="@string/show_splash" />
		<PreferenceScreen
			android:id="@+id/splash_path"
			android:key="splashPath"
			android:defaultValue="@string/default_splash_path"
			android:title="@string/splash_path"
			android:dependency="showSplash" />
	</PreferenceCategory>
</PreferenceScreen>