<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/draw_relative_layout">
    <LinearLayout android:id="@+id/drawViewLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true">
        
    </LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
	    <Button android:id="@+id/btnSelectColor" android:layout_height="wrap_content" android:layout_width="wrap_content" />
	    <Button android:id="@+id/btnFinishDraw" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/save_and_close" />
	    <Button android:id="@+id/btnResetDraw" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/reset_image" />
	    <Button android:id="@+id/btnCancelDraw" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cancel" />
	</LinearLayout>
</RelativeLayout>