<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainlayout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<com.google.android.maps.MapView
		android:id="@+id/mapview"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:clickable="true"
		android:apiKey="0wsgFhRvVBLVpgaFzmwaYuqfU898z_2YtlKSlkg" />
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:paddingTop="5dip"
		android:paddingBottom="5dip"
		android:background="#BF000000">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:paddingTop="2dip"
			android:paddingBottom="2dip">
			<Button
				android:text="@string/accept_location"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="1" />
			<Button
				android:text="@string/cancel_location"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="1" />
		</LinearLayout>
		<TextView
			android:id="@+id/location_status"
			android:text="@string/please_wait_long"
			android:color="#FFFFFF"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
</RelativeLayout>