<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/pwd_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/enter_new_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@+id/pwd_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwd_label"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/verify_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwd_field"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/verify_new_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@+id/verify_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_label"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_field"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/positive_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/negative_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>